# opengl-tasks

./: CMakeLists.txt  LICENSE  README-zh.md  README.md
include/glad/: glad.h
lib/: libglad.lib
src/: glad.c  main.cpp
src/tasks/task1/: task_1.cpp  task_frame_rate.cpp
src/tasks/task2/: task_2.cpp  task_2_1.cpp  task_2_2.cpp  task_2_3.cpp
src/tasks/task3/: task_3_1.cpp  task_3_2.cpp  vertex_shader.glsl
src/tasks/task4/: fragment_shader.glsl  task_4.cpp  vertex_shader.glsl
src/tasks/task5/: task_5.cpp
